# contcont

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml
backend/: .gitignore  Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230721_114813_art_and_literature_tables.rs  m20230721_151213_vote_tables.rs  m20230722_010433_art_description_column.rs  m20230722_013515_nsfw_columns.rs
backend/src/: config.rs  handler.rs  main.rs  misskey.rs  utils.rs
backend/src/entity/: art.rs  art_vote.rs  instance.rs  literature.rs  literature_vote.rs  mod.rs  prelude.rs
backend/src/handler/: api.rs
backend/src/handler/api/: contest.rs  oauth.rs
backend/src/handler/api/contest/: result.rs  submission.rs  voting.rs
frontend/: .eslintrc.cjs  index.html  package.json
frontend/src/: App.tsx  ArtListView.tsx  ArtResultView.tsx  ArtSubmitView.tsx  ArtView.tsx  ArtVoteView.tsx  Auth.ts  Auth.tsx  AuthRequired.tsx  HttpTypes.ts  LiteratureListView.tsx  LiteratureResultView.tsx  LiteratureSubmitView.tsx  LiteratureView.tsx  LiteratureVoteView.tsx  LoadingView.tsx  LoginView.tsx  MainView.tsx  MutationHooks.ts  NavBar.tsx  NotEnabledView.tsx  NotFoundView.tsx  QueryHooks.ts  ResultNotOpenedView.tsx  SubmissionNotOpenedView.tsx  VotingNotOpenedView.tsx
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
