[workspace]
members = [
  ".",
  "migration",
]

[package]
name = "contcont"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
axum = { version = "0.6.19", features = ["headers", "multipart"] }
envy = "0.4.2"
jsonwebtoken = "8.3.0"
migration = { version = "0.1.0", path = "migration" }
mime = "0.3.17"
oauth2 = "4.4.1"
once_cell = "1.18.0"
rand = "0.8.5"
rand_seeder = "0.2.3"
random-string = "1.0.0"
reqwest = { version = "0.11.18", features = ["json", "rustls"], default-features = false }
sea-orm = { version = "0.11.3", default-features = false, features = ["macros", "with-json", "with-rust_decimal", "with-bigdecimal", "with-uuid", "sqlx-sqlite", "runtime-tokio-rustls", "with-time"] }
serde = { version = "1.0.173", features = ["derive"] }
thumbnailer = "0.5.1"
time = { version = "0.3.23", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.4.2", features = ["fs"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.10.1"
url = { version = "2.4.0", features = ["serde"] }
